jenkins/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
    name: jenkins
spec:
    replicas: 1
    template:
        metadata:
            labels:
                app: jenkins
        spec:
            containers:
                - name:  jenkins
                  image: jenkinsci/blueocean
                  ports:
                      - containerPort: 8080
