jenkins/service.yaml
kind: Service
apiVersion: v1
metadata:
    name: jenkins-service
spec:
    selector:
        app: jenkins
    ports:
        - protocol: TCP
          port: 8000
          targetPort: 8080
