jenkins/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  annotations:
      http.port: "8000"
spec:
  backend:
    serviceName: jenkins-service
    servicePort: 8000
